test/llvm/macros/macro-add.good
macro-add.chpl:3: error: Could not find C variable ADD_CONSTANT - perhaps it is a complex macro?
