test/llvm/macros/macro-add.chpl
use SysCTypes;

extern const ADD_CONSTANT : c_int;
writeln("ADD_CONSTANT ", ADD_CONSTANT);
